# deep-freeze

./: .env.example  .gitignore  Cargo.toml  README.md  sqlite.db  terraform.tfstate
.cargo/: config.toml
.github/workflows/: main.yml  rust.yml  terraform-apply.yml  terraform-plan.yml
src/: auth.rs  aws.rs  cli.rs  db.rs  deepfreeze.rs  dropbox.rs  http.rs  json.rs  lib.rs  localfs.rs  main.rs  progress.rs  util.rs
test/: 1-MiB-generated-2.txt  1-MiB-generated-3.txt  1-MiB-generated-4.txt  1-MiB-generated-5.txt  test-s3-get-attrs.txt
tf/: gateways.tf  keys.tf  main.tf  network.tf  outputs.tf  prepare2.sh  security.tf  servers.tf  subnets.tf  tfplan
