[package]
name = "deep-freeze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
indicatif = "0.17.5"
open = "4.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json", "stream"] }
sedregex = "0.2.5"
serde_json = "1.0.97"
sqlite = "0.31.0"
tokio = { version ="1.28.2", features=["full"] }
