[package]
name = "deep-freeze"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
aws-sdk-secretsmanager = "0.28.0"
aws-smithy-http = "0.55.3"
aws-smithy-types = "0.55.3"
clap = { version = "4.3.10", features = ["derive"] }
console = "0.15.7"
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
hyper = { version = "0.14.27", features = ["stream"] }
indicatif = "0.17.5"
inquire = "0.6.2"
open = "4.1.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking", "json", "stream"] }
secrets-manager-macro = "0.1.0"
sedregex = "0.2.5"
serde_json = "1.0.97"
sqlite = "0.31.0"
tokio = { version ="1.28.2", features=["full"] }
